<resources>
    <string name="app_name">ItemRent</string>

    <!-- Actions -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all">Delete all entries</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>

    <!-- Buttons -->
    <string name="button_sell">Sell</string>
    <string name="button_call_supplier">Call supplier</string>
    <string name="button_delete">Delete</string>

    <string name="out_of_stock">Out of stock</string>

    <!-- Availability options -->
    <string name="availability_out_of_stock">Out of stock</string>
    <string name="availability_in_stock">In stock</string>
    <string name="availability_busy">Item busy</string>

    <!-- Dialogs -->
    <!-- Dialog message to ask the user to confirm deleting the current item -->
    <string name="delete_dialog_msg">Delete this item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <!-- Dialog message when user is leaving editor but hasn't saved changes -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <string name="phone_call_denied">Phone call failed (denied by user?)</string>
    <string name="phone_call_empty_number">Phone call failed: dialing empty phone number</string>


    <string name="sell_item_success">Item sold, items remaining: </string>
    <string name="sell_item_error">Item cannot be sold because of error</string>
    <string name="sell_item_zero">No items left to sell</string>

    <string name="decrease_quantity_zero">No items left to decrease</string>

    <!-- Editor -->
    <string name="editor_activity_title_new_item">New item</string>
    <string name="editor_activity_title_edit_item">Edit item</string>
    <string name="editor_delete_item_successful">Item deleted</string>
    <string name="editor_delete_item_failed">Error with deleting item</string>
    <!-- Fields requirements -->
    <string name="editor_price_purchase_null">Purchase price must be set.</string>
    <string name="editor_price_sell_zero">Sell price must be set to non-zero value.</string>
    <string name="editor_item_name_null">Item name is required. Please fill item name.</string>
    <string name="editor_item_quantity_null">Please fill item quantity.</string>
    <string name="editor_item_supplier_name_null">Please fill supplier name.</string>
    <string name="editor_item_supplier_phone_null">Please fill supplier phone.</string>
    <!-- Editor menu strings -->
    <string name="category_generic">Generic data</string>
    <string name="category_price">Price (purchase and sell)</string>
    <string name="category_supplier">Supplier information</string>

    <string name="hint_item_name">Item name</string>
    <string name="hint_item_quantity">Quantity</string>
    <string name="hint_item_price_purchase">Purchase price</string>
    <string name="hint_item_price_sell">Sell price</string>
    <string name="hint_item_supplier_name">Supplier name</string>
    <string name="hint_item_supplier_phone">Supplier phone</string>
    
    <!-- Save/Insert messages -->
    <string name="editor_insert_item_successful">Item saved</string>
    <string name="editor_insert_item_failed">Error with saving item</string>
    <string name="editor_update_item_successful">Item updated</string>
    <string name="editor_update_item_failed">Error with updating item</string>


    <string name="empty_text">No items in inventory\nTo add item tap plus button at bottom-right</string>

</resources>
