<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/generic_padding"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryTitleStyle"
            android:text="@string/category_generic" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/input_padding">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_item_name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_item_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_item_quantity"
                android:inputType="number" />

            <Button
                android:id="@+id/button_plus_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+" />

            <Button
                android:id="@+id/button_minus_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-" />
        </LinearLayout>
    </LinearLayout>

    <!-- Price category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryTitleStyle"
            android:text="@string/category_price" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/input_padding">

            <!-- Purchase price field -->
            <EditText
                android:id="@+id/edit_item_price_purchase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_item_price_purchase"
                android:inputType="number" />

            <!-- Sell price field -->
            <EditText
                android:id="@+id/edit_item_price_sell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_item_price_sell"
                android:inputType="number" />

        </LinearLayout>
    </LinearLayout>

    <!-- Supplier category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryTitleStyle"
            android:text="@string/category_supplier" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/input_padding">

            <!-- Supplier name field -->
            <EditText
                android:id="@+id/edit_item_supplier_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_item_supplier_name"
                android:inputType="textCapWords" />

            <!-- Supplier phone field -->
            <EditText
                android:id="@+id/edit_item_supplier_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_item_supplier_phone"
                android:inputType="phone" />

            <Button
                android:id="@+id/button_call_supplier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_call_supplier"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_delete"
                android:visibility="gone" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>